--- a/theme.css
+++ b/theme.css
@@ -1,19 +1,3 @@
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    border: 1px solid #ddd;
-}
-
-table th, table td {
-    text-align: left;
-    padding: 16px;
-}
-
-table tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-body {
-    margin: 0 15%;
+header {
+    background-color: #34393f;
 }
